--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "AI Personal Coaching LINE Bot",
   "main": "api/webhook.js",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'No build step required'",
-    "start": "echo 'Use vercel dev for local development'"
+    "build": "echo 'No build required'"
   },
-  "dependencies": {
-    "@vercel/node": "^3.0.0"
-  },
+  "dependencies": {},
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
   "keywords": [
     "line-bot",
@@ -21,6 +17,6 @@
     "gemini",
     "webhook"
   ],
-  "author": "Your Name",
+  "author": "Haruo Oozawa",
   "license": "MIT"
 }
