--- a/package.json
+++ b/package.json
@@ -2,20 +2,17 @@
   "name": "ai-coaching-linebot",
   "version": "1.0.0",
   "description": "AI Personal Coaching LINE Bot",
-  "main": "api/webhook.js",
-  "scripts": {
-    "build": "echo 'No build required'"
-  },
-  "dependencies": {},
+  "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
+  },
+  "scripts": {
+    "build": "echo 'Build completed'"
   },
   "keywords": [
     "line-bot",
     "ai",
-    "coaching",
-    "gemini",
-    "webhook"
+    "coaching"
   ],
   "author": "Haruo Oozawa",
   "license": "MIT"
